# zeno

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  NOISE.md  PERFORMANCE.md  QASM.md  QASM3.md  TUTORIAL.md
examples/: bell.qasm  bernstein_vazirani.qasm  ghz.qasm  grover.qasm  qft.qasm  teleport.qasm
src/: circuit.rs  compiler.rs  exec.rs  gates.rs  ir.rs  lib.rs  main.rs  mem.rs  metal.rs  noise.rs  qasm.rs  qasm3.rs  sample.rs  state.rs
tests/: aer_reference.py  analytic.rs  cli.rs  noise.rs  reference.rs
