[package]
name = "zeno"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Apple Silicon-native quantum circuit simulator, compiler and runner"
license = "MIT"
repository = "https://github.com/cleoanka/zeno"
readme = "README.md"
keywords = ["quantum", "simulator", "qasm", "apple-silicon", "metal"]
categories = ["science", "simulation", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
metal = { version = "0.31", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
# GPU state-vector backend (f32) via Metal compute; macOS only.
metal = ["dep:metal", "dep:objc"]

[profile.release]
lto = "thin"
codegen-units = 1
